<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    tools:context=".LoginActivity">

<LinearLayout
    android:id="@+id/ok_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/username"
        android:textSize="16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="25"

        />
    <EditText
        android:hint="@string/userentry"
        android:textSize="18sp"
        android:layout_weight="75"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
         />
</LinearLayout>



    <LinearLayout
        android:id="@+id/pass_field"
        android:layout_below="@id/ok_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"

            />
        <EditText
            android:hint="@string/passentry"
            android:textSize="18sp"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/confirm_field"
        android:layout_below="@id/pass_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/confirm"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"

            />
        <EditText
            android:hint="@string/passconfirm"
            android:textSize="18sp"
            android:layout_weight="75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>


    <Button
        android:id="@+id/cancel_button"
        android:layout_below="@id/confirm_field"
        android:layout_alignRight="@id/ok_button"
        android:layout_alignEnd="@id/ok_button"
        android:text="@string/submit"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>
